feat: Add some comments for refactor

--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,9 @@
   <script src="../build/react.js"></script>
   <script src="../build/react-dom.js"></script>
   <script src="../dist/bundle.js"></script>
+  <!--
+    if add html-webpack-plugin settings,
+    all of the css / script import settings could be removed.
+  -->
 </body>
 </html>
