--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
-
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <link rel="stylesheet" href="../app/styles/style.css" />
   <title>Todo</title>
 </head>
-
 <body>
   <div id="app"></div>
-  <script src="../build/react.js"></script>
-  <script src="../build/react-dom.js"></script>
-  <script src="../dist/bundle.js"></script>
+  <script type="text/javascript" src="../dist/bundle.js"></script>
 </body>
 </html>
